--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
